--- a/css/main.css
+++ b/css/main.css
@@ -813,6 +813,8 @@ input[type=radio]:checked + .upload-filter-label .upload-filter-preview {
 .err-message {
   width: auto;
   padding: 20px 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: #fff;
   border: 1px solid #E31215;
   font-size: 12px;
